[gd_scene load_steps=15 format=2]

[ext_resource path="res://demo-assets/PNG/Backgrounds/set4_background.png" type="Texture" id=1]
[ext_resource path="res://demo-assets/PNG/Backgrounds/set2_background.png" type="Texture" id=2]
[ext_resource path="res://assets/game-objects/gui-system/fonts/CharacterSheet.tres" type="DynamicFont" id=3]
[ext_resource path="res://demo-assets/PNG/Backgrounds/set1_background.png" type="Texture" id=4]
[ext_resource path="res://demo-assets/PNG/Backgrounds/set3_background.png" type="Texture" id=5]
[ext_resource path="res://assets/game-objects/gui-system/fonts/CharacterSheet25Red.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/game-objects/gui-system/fonts/CharacterSheet25.tres" type="DynamicFont" id=7]
[ext_resource path="res://demo-assets/PNG/Other/blockRed_key.png" type="Texture" id=8]
[ext_resource path="res://demo-assets/PNG/Other/blockRed_lock.png" type="Texture" id=9]
[ext_resource path="res://demo-assets/PNG/Other/blockRed.png" type="Texture" id=10]
[ext_resource path="res://demo-assets/PNG/Other/blockGreen.png" type="Texture" id=11]
[ext_resource path="res://demo-assets/PNG/Other/blockGreen_key.png" type="Texture" id=12]
[ext_resource path="res://demo-assets/PNG/Other/blockGreen_lock.png" type="Texture" id=13]
[ext_resource path="res://scripts/CharacterSheet.gd" type="Script" id=14]

[node name="CharacterSheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = -20.0

[node name="MenuBackground" type="NinePatchRect" parent="HBoxContainer"]
margin_right = 330.0
margin_bottom = 560.0
rect_min_size = Vector2( 330, 440 )
texture = ExtResource( 2 )
patch_margin_left = 20
patch_margin_top = 30
patch_margin_right = 20
patch_margin_bottom = 30

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer/MenuBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Stats" type="TextureButton" parent="HBoxContainer/MenuBackground/Buttons"]
margin_right = 290.0
margin_bottom = 127.0
rect_min_size = Vector2( 220, 50 )
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/MenuBackground/Buttons/Stats"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Stats"
align = 1
valign = 1

[node name="Save" type="TextureButton" parent="HBoxContainer/MenuBackground/Buttons"]
margin_top = 131.0
margin_right = 290.0
margin_bottom = 258.0
rect_min_size = Vector2( 220, 50 )
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/MenuBackground/Buttons/Save"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Save"
align = 1
valign = 1

[node name="System" type="TextureButton" parent="HBoxContainer/MenuBackground/Buttons"]
margin_top = 262.0
margin_right = 290.0
margin_bottom = 389.0
rect_min_size = Vector2( 220, 50 )
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/MenuBackground/Buttons/System"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "System"
align = 1
valign = 1

[node name="Exit" type="TextureButton" parent="HBoxContainer/MenuBackground/Buttons"]
margin_top = 393.0
margin_right = 290.0
margin_bottom = 520.0
rect_min_size = Vector2( 220, 50 )
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/MenuBackground/Buttons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Exit"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 334.0
margin_right = 964.0
margin_bottom = 560.0
size_flags_horizontal = 3

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 630.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="MainStats" type="Control" parent="HBoxContainer/VBoxContainer/Stats"]
margin_right = 630.0
margin_bottom = 560.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_right = 450.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Logic" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 51.0
margin_right = 450.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 30 )

[node name="StatBackground" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Logic"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -30.0
margin_right = 175.0
margin_bottom = 10.0
rect_min_size = Vector2( 500, 40 )
texture = ExtResource( 5 )
expand = true

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Logic/StatBackground" groups=["MinButtons"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Logic/StatBackground" groups=["PlusButtons"]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
expand = true

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Logic/StatBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 280, 60 )

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Logic/StatBackground/Stats"]
margin_top = 19.0
margin_right = 242.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Logic"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Logic/StatBackground/Stats" groups=["ChangeLabels"]]
margin_left = 246.0
margin_top = 6.0
margin_right = 246.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 6 )
text = "
"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Logic/StatBackground/Stats"]
margin_left = 250.0
margin_top = 19.0
margin_right = 280.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "10"

[node name="Dream" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 112.0
margin_right = 450.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 30 )

[node name="StatBackground" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dream"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -30.0
margin_right = 175.0
margin_bottom = 10.0
rect_min_size = Vector2( 500, 40 )
texture = ExtResource( 5 )
expand = true

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dream/StatBackground" groups=["MinButtons"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dream/StatBackground" groups=["PlusButtons"]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
expand = true

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dream/StatBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 280, 60 )

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dream/StatBackground/Stats"]
margin_top = 19.0
margin_right = 242.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Dream"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dream/StatBackground/Stats" groups=["ChangeLabels"]]
margin_left = 246.0
margin_top = 6.0
margin_right = 246.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 6 )
text = "
"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dream/StatBackground/Stats"]
margin_left = 250.0
margin_top = 19.0
margin_right = 280.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "10"

[node name="Empathy" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 173.0
margin_right = 450.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 30 )

[node name="StatBackground" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Empathy"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -30.0
margin_right = 175.0
margin_bottom = 10.0
rect_min_size = Vector2( 500, 40 )
texture = ExtResource( 5 )
expand = true

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Empathy/StatBackground" groups=["MinButtons"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Empathy/StatBackground" groups=["PlusButtons"]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
expand = true

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Empathy/StatBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 280, 60 )

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Empathy/StatBackground/Stats"]
margin_top = 19.0
margin_right = 242.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Empathy"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Empathy/StatBackground/Stats" groups=["ChangeLabels"]]
margin_left = 246.0
margin_top = 6.0
margin_right = 246.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 6 )
text = "
"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Empathy/StatBackground/Stats"]
margin_left = 250.0
margin_top = 19.0
margin_right = 280.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "10"

[node name="Perception" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 234.0
margin_right = 450.0
margin_bottom = 264.0
rect_min_size = Vector2( 0, 30 )

[node name="StatBackground" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Perception"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -30.0
margin_right = 175.0
margin_bottom = 10.0
rect_min_size = Vector2( 500, 40 )
texture = ExtResource( 5 )
expand = true

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Perception/StatBackground" groups=["MinButtons"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Perception/StatBackground" groups=["PlusButtons"]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
expand = true

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Perception/StatBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 280, 60 )

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Perception/StatBackground/Stats"]
margin_top = 19.0
margin_right = 242.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Perception"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Perception/StatBackground/Stats" groups=["ChangeLabels"]]
margin_left = 246.0
margin_top = 6.0
margin_right = 246.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 6 )
text = "
"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Perception/StatBackground/Stats"]
margin_left = 250.0
margin_top = 19.0
margin_right = 280.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "10"

[node name="Charisma" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 295.0
margin_right = 450.0
margin_bottom = 325.0
rect_min_size = Vector2( 0, 30 )

[node name="StatBackground" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Charisma"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -30.0
margin_right = 175.0
margin_bottom = 10.0
rect_min_size = Vector2( 500, 40 )
texture = ExtResource( 5 )
expand = true

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Charisma/StatBackground" groups=["MinButtons"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Charisma/StatBackground" groups=["PlusButtons"]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
expand = true

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Charisma/StatBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 280, 60 )

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Charisma/StatBackground/Stats"]
margin_top = 19.0
margin_right = 242.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Charisma"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Charisma/StatBackground/Stats" groups=["ChangeLabels"]]
margin_left = 246.0
margin_top = 6.0
margin_right = 246.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 6 )
text = "
"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Charisma/StatBackground/Stats"]
margin_left = 250.0
margin_top = 19.0
margin_right = 280.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "10"

[node name="Culture" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 356.0
margin_right = 450.0
margin_bottom = 386.0
rect_min_size = Vector2( 0, 30 )

[node name="StatBackground" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Culture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -30.0
margin_right = 175.0
margin_bottom = 10.0
rect_min_size = Vector2( 500, 40 )
texture = ExtResource( 5 )
expand = true

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Culture/StatBackground" groups=["MinButtons"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Culture/StatBackground" groups=["PlusButtons"]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
expand = true

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Culture/StatBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 280, 60 )

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Culture/StatBackground/Stats"]
margin_top = 19.0
margin_right = 242.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Culture"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Culture/StatBackground/Stats" groups=["ChangeLabels"]]
margin_left = 246.0
margin_top = 6.0
margin_right = 246.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 6 )
text = "
"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Culture/StatBackground/Stats"]
margin_left = 250.0
margin_top = 19.0
margin_right = 280.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "10"

[node name="Composure" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 417.0
margin_right = 450.0
margin_bottom = 447.0
rect_min_size = Vector2( 0, 30 )

[node name="StatBackground" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Composure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -30.0
margin_right = 175.0
margin_bottom = 10.0
rect_min_size = Vector2( 500, 40 )
texture = ExtResource( 5 )
expand = true

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Composure/StatBackground" groups=["MinButtons"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Composure/StatBackground" groups=["PlusButtons"]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 50 )
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
expand = true

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Composure/StatBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 280, 60 )

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Composure/StatBackground/Stats"]
margin_top = 19.0
margin_right = 242.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Composure"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Composure/StatBackground/Stats" groups=["ChangeLabels"]]
margin_left = 246.0
margin_top = 6.0
margin_right = 246.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 6 )
text = "
"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Composure/StatBackground/Stats"]
margin_left = 250.0
margin_top = 19.0
margin_right = 280.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "10"

[node name="StatPoints" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 478.0
margin_right = 450.0
margin_bottom = 528.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/StatPoints"]
margin_right = 75.0
margin_bottom = 50.0
rect_min_size = Vector2( 75, 0 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/StatPoints"]
margin_left = 79.0
margin_top = 10.0
margin_right = 268.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Points: 7"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/StatPoints"]
margin_left = 272.0
margin_right = 297.0
margin_bottom = 50.0
rect_min_size = Vector2( 25, 0 )

[node name="Confirm" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/StatPoints"]
margin_left = 301.0
margin_right = 521.0
margin_bottom = 50.0
rect_min_size = Vector2( 220, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/StatPoints/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Confirm"
align = 1
valign = 1

[node name="Exit" type="Control" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 560.0
margin_right = 630.0
margin_bottom = 560.0

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Exit/Buttons"]
margin_right = 630.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="EandS" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Exit/Buttons"]
margin_top = 154.0
margin_right = 630.0
margin_bottom = 204.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Exit/Buttons/EandS"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="ExitAndSave" type="TextureButton" parent="HBoxContainer/VBoxContainer/Exit/Buttons/EandS"]
margin_left = 54.0
margin_right = 576.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Exit/Buttons/EandS/ExitAndSave"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_right = 315.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Exit and Save"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Exit/Buttons/EandS"]
margin_left = 580.0
margin_right = 630.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Exit/Buttons"]
margin_top = 208.0
margin_right = 630.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 50 )

[node name="EnoS" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Exit/Buttons"]
margin_top = 262.0
margin_right = 630.0
margin_bottom = 312.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Exit/Buttons/EnoS"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="ExitAndSave" type="TextureButton" parent="HBoxContainer/VBoxContainer/Exit/Buttons/EnoS"]
margin_left = 54.0
margin_right = 576.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Exit/Buttons/EnoS/ExitAndSave"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_right = 315.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Exit without Saving"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Exit/Buttons/EnoS"]
margin_left = 580.0
margin_right = 630.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[connection signal="pressed" from="HBoxContainer/MenuBackground/Buttons/Stats" to="." method="_on_Stats_pressed"]
[connection signal="pressed" from="HBoxContainer/MenuBackground/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Stats/MainStats/StatPoints/Confirm" to="." method="_on_Confirm_pressed"]
